--- a/src/configit-app/configit-app.html
+++ b/src/configit-app/configit-app.html
@@ -9,7 +9,7 @@
         display: block;
       }
     </style>
-    <lib-element></lib-element>
+    <lib-element country="DE"></lib-element>
     <h2>Hello [[prop1]]!</h2>
     <test-element id="test" prop1="{{childValue}}"></test-element>
     <test-element id="test" prop1="something else"></test-element>
