--- a/src/configit-app/bla.html
+++ b/src/configit-app/bla.html
@@ -1,5 +1,5 @@
-<link rel="import" href="lib.html">
+<link rel="import" href="easy.html">
 
-<lib-element></lib-element>
+<easy-el message="Hello There!"></easy-el>
 <div>Some stuff <b>from</b> bla</div>
 <div>Some more stuff from bla</div>
